--- a/portfolio_website.css
+++ b/portfolio_website.css
@@ -65,12 +65,11 @@ body {
     right: var(--pad);
     top: var(--pad);
     bottom: var(--pad);
-    mix-blend-mode: difference;
 }
 
 .frame-line {
     position: absolute;
-    background-color: #FFF;
+    background-color: #000;
     opacity: .2;
     transition: opacity 1s, height 0.5s, width 0.5s, top 0.5s, left 0.5s;
 }
@@ -156,7 +155,6 @@ body {
 .nav-text {
     cursor: pointer;
     color: #000;
-    mix-blend-mode: difference;
     transition: opacity 0.5s;
 }
 
@@ -178,7 +176,6 @@ body {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    mix-blend-mode: difference;
 }
 
 .content-inner {
@@ -195,7 +192,7 @@ body {
 }
 
 .page-content {
-    color: #FFF;
+    color: #000;
     font-size: 15px;
     position: absolute;
     right: calc(var(--pad)*2);
@@ -221,7 +218,7 @@ body {
 
 .link {
     cursor: pointer;
-    color: #FFF;
+    color: #000;
     opacity: 1;
     transition: opacity 0.5s;
 }
