--- a/portfolio-frontend/src/index.css
+++ b/portfolio-frontend/src/index.css
@@ -19,6 +19,15 @@ code {
     monospace;
 }
 
+html {
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+}
+
+.main .page {
+  scroll-snap-align: start;
+}
+
 .navbar {
   transition: all 0.5s ease;
 }
@@ -38,12 +47,12 @@ code {
 #light .navbar {
   transition: all 1s ease;
   background-color: #FCC88F;
-  box-shadow: 0px 0px 60px 50px #FCC88F;
+  box-shadow: 0px 0px 40px 40px #FCC88F; 
 }
 #dark .navbar {
   transition: all 1s ease;
   background-color: #10193C;
-  box-shadow: 0px 0px 60px 50px #10193C;
+  box-shadow: 0px 0px 40px 40px #10193C;
 }
 
 @keyframes pop-in {
@@ -73,6 +82,7 @@ code {
   content: "light theme";
 }
 
+
 @layer base {
   #dark * {
     @apply text-white;
@@ -85,6 +95,12 @@ code {
   #light .mode-toggle {
   }
   .page {
-    @apply h-dvh;
+    @apply h-dvh pt-40;
+  }
+  h2 {
+    @apply text-xl md:text-2xl lg:text-4xl;
+  }
+  h3 {
+    @apply text-base md:text-lg lg:text-2xl;
   }
 }
