--- a/portfolio-frontend/src/index.css
+++ b/portfolio-frontend/src/index.css
@@ -41,6 +41,19 @@ html {
   display: none;
 }
 
+.gallery {
+  scroll-behavior: smooth;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+}
+
+.project-tile {
+  display: flex;
+  flex-direction: column;
+  width: 100rem;
+  scroll-snap-align: center;
+}
+
 #light {
   transition: all 1s ease;
   background-color: #FCC88F;
