--- a/portfolio-frontend/src/index.css
+++ b/portfolio-frontend/src/index.css
@@ -26,6 +26,7 @@ html {
 
 .main .page {
   scroll-snap-align: start;
+  overflow-y: scroll;
 }
 
 .header {
@@ -50,7 +51,6 @@ html {
 .project-tile {
   display: flex;
   flex-direction: column;
-  width: 100rem;
   scroll-snap-align: center;
 }
 
